--- a/app/src/main/res/menu/action_bar2.xml
+++ b/app/src/main/res/menu/action_bar2.xml
@@ -3,15 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/crop"
+        android:icon="@android:drawable/ic_menu_crop"
+        android:title="Crop image"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/contacts"
+        android:icon="@android:drawable/ic_input_add"
+        android:title="Add to contacts"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/upload_image"
-        android:icon="@android:drawable/ic_menu_upload"
+        android:icon="@android:drawable/ic_menu_gallery"
         android:title="Select image"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/camera"
         android:icon="@android:drawable/ic_menu_camera"
-        android:title="Upload image"
+        android:title="Capture image"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="Remove image"
+        app:showAsAction="ifRoom" />
+
 
 </menu>
