--- a/app/src/main/res/menu/action_bar2.xml
+++ b/app/src/main/res/menu/action_bar2.xml
@@ -32,5 +32,10 @@
         android:title="Remove image"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/livescan"
+        android:title="Live text scanning"
+        app:showAsAction="collapseActionView" />
+
 
 </menu>
