--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                     android:textColor="@android:color/background_dark"
                     android:textSize="24sp" />
 
-                <TextView
+                <EditText
                     android:id="@+id/alpha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -68,13 +68,11 @@
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="420dp"
                     android:layout_alignParentLeft="false"
                     android:layout_alignParentStart="false"
                     android:layout_centerHorizontal="true"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:scaleType="centerInside"
-                    android:visibility="gone" />
+                    android:layout_gravity="center_vertical|center_horizontal" />
 
 
                 <Button
@@ -107,7 +105,7 @@
                     android:textSize="18sp"
                     android:visibility="gone" />
 
-                <TextView
+                <EditText
                     android:id="@+id/result"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
