--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#060f41</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimary">#2980b9</color>
+    <color name="colorPrimaryDark">#2c3e50</color>
     <color name="colorAccent">#333ea6</color>
     <color name="white">#ffffff</color>
-    <color name="background">#9ac8e4</color>
+    <color name="background">#bdc3c7</color>
 </resources>
